2001-01-09  Lauris Kaplinski  <lauris@ximian.com>

	* samples/mangatips1.svg: New file
	* samples/mangatips2.svg: New file

	* src/xml/Makefile.am: Use SODIPODI_CFLAGS

2001-01-08  Frank Felfe  <innerspace@iname.com>
	
	* desktop.*: use gnomeappbar in desktop-window,
	use gtk_combo_text widget from libgal

	* src/desktop-events.c: use gnomeappbar

	* src/event-context.c: global keybindings

	* src/select-context.c: keybindings

	* src/text-context.c: filter Ctrl-keys for keybindings

	* src/interface.c: connect to focus-in-event from desktop-window

	* glade/toolbox.glade: keybindings for the maintoolbox-menu

	* doc/keybindings.txt

2001-01-08  Lauris Kaplinski  <lauris@helixcode.com>

	* src/selection-chemistry.c (sp_selection_rotate_90): Brought
	function here from toolbox.c and renamed

	* glade/toolbox.glade: Use sp_selection_rotate_90

	* src/desktop_snap.* (sp_desktop_circular_snap): New function

	* src/rect-context.c (sp_rect_context_destroy): Finish object, if exists

	* src/ellipse-context.c: (sp_ellipse_context_destroy): Ditto
	
2001-01-04  Lauris Kaplinski  <lauris@helixcode.com>

	* src/helper/sodipodi-ctrlrect.*: Draw by hand instead of using
	libart. That fixed ugly-ugly freezing bug in Mandrake

	* src/preferences-skeleton.h: New file, encoding default preferences

	* glade/sodipodi.glade: Changes _Uus to _New in menu ;)

	* src_sodipodi.* (sodipodi_load_preferences): New function
	(sodipodi_save_preferences): New function
	(sodipodi_get_repr): New function for retrieving data from preferences
	DOM tree.
	
	* src/draw-context.c (set_to_accumulated): Use style preferences
	* src/rect-context.c (sp_rect_drag): Ditto
	* src/ellipse-context.c (sp_ellipse_drag): Ditto
	* src/text-context.c (sp_text_context_root_handler): Ditto
	(sp_text_complete): ungrab keyboard

	* src/toolbox.c (sp_toolbox_create): Use preferences
	
2001-01-02  Lauris Kaplinski  <lauris@helixcode.com>

	* src/widgets/sp-toolbox.*: general toolbox implementation
